--- a/things-i-like.html
+++ b/things-i-like.html
@@ -2,13 +2,14 @@
 <html>
 <head>
     <title>Wagwan my Gs</title>
-    
+<link  href="CSS/styles.css" rel="stylesheet" type="text/css">
+
 </head>
 <body>
   <h1>Welcome to the Future</h1>
   <h2>This article is of no officiality. Please dont sue.</h2>
 
-  <p>The main reason i set up this website is to spread awareness of gaming laptops and how magnificently powerful they are in comparison to the common office laptops used. Though the common laptop is still powerful.</p>
+  <p class="intro">The main reason i set up this website is to spread awareness of gaming laptops and how magnificently powerful they are in comparison to the common office laptops used. Though the common laptop is still powerful.</p>
   <p>The leading brand of gaming laptops is currently Razer as it develops "AlienWare" which basically means that both the hardware and the software are extremely powerful. Almost out of this world.</p>
 
   <p> Here are the specs of the latest Razer gaming laptop, The Razer Blade Stealth;</p>
@@ -32,6 +33,7 @@
       </ul>
     <li> Operating System(OS): Windows&#174 10 Home (64-bit)</ls>
   </ul>
+  <img src="photos/Razor.jpg" alt="A picture of a computer" align="middle">
   <p>The Razer laptops may even come with the Thunderbolt<sup>TM</sup> 3. This cable enables the laptop to connect to any display, port or peripheral device-allowing more utility with zero hassle.</p>
   <p> The Thunderbolt<sup>TM</sup> 3 contains some of the following features:</p>
   <ul>
@@ -40,14 +42,18 @@
     <li>Works with USB, PCI Express and Display Port</li>
     <li>Connect DVI, HDMI and VGA displays via adapters</li>
     <li>Powers your laptop</li>
+    <img src="photos/thunderbolt3.jpg">
   </ul>
   <h3>GAMING HAS NEVER FELT SO GOOD OR LOOKED SO GOOD..... THE NEXT LEVEL HAS BEEN REACHED</h3>
   <p>The Razer Blade Stealth comes in two colours:</p>
     <ul>
       <li>Gunmetal and Black</ls>
-      <li>Black only</li>
+      <li>Black</li>
     </ul>
   <p>The keyboard comes in ALL colours. Approximately 16.4 million colours that change gently and slowly over time or change after a tap of the key.</p>
   <h1>YOUR CHOICE</h1>
+  <h2 class="author"> About the author</h2>
+  <p> The author is a boy with a mad love toward gaming and enjoys the suspense and emotion it provides to him through visual and mental stimulation.Many of the previous generation find gaming to be a very tedious activity and waste of time. In reality it develops a childs ability to do most things grown ups wouldnt be able to do.</p>
+  <img src="photos/gaminghelps.jpg" align="middle">
 </body>
 </html>
