--- a/things-i-like.html
+++ b/things-i-like.html
@@ -1,7 +1,7 @@
 
 <html>
 <head>
-    <title>Wagwan my Gs</title>
+    <title>The Future of Gaming</title>
 <link  href="CSS/styles.css" rel="stylesheet" type="text/css">
 
 </head>
@@ -37,23 +37,26 @@
   <p>The Razer laptops may even come with the Thunderbolt<sup>TM</sup> 3. This cable enables the laptop to connect to any display, port or peripheral device-allowing more utility with zero hassle.</p>
   <p> The Thunderbolt<sup>TM</sup> 3 contains some of the following features:</p>
   <ul>
+  <img src="photos/thunderbolt3.jpg">
     <li>It has speeds able to reach 40 mbps</li>
     <li>Plug-and-Play external graphics</li>
     <li>Works with USB, PCI Express and Display Port</li>
     <li>Connect DVI, HDMI and VGA displays via adapters</li>
     <li>Powers your laptop</li>
-    <img src="photos/thunderbolt3.jpg">
   </ul>
   <h3>GAMING HAS NEVER FELT SO GOOD OR LOOKED SO GOOD..... THE NEXT LEVEL HAS BEEN REACHED</h3>
   <p>The Razer Blade Stealth comes in two colours:</p>
     <ul>
-      <li>Gunmetal and Black</ls>
+      <li>Gunmetal</ls>
       <li>Black</li>
+  <img src="photos/gunmetal.jpg" style="width:300px;height:150px;">
+  <img src="photos/option2.jpg" style="width:300px;height:150px;">
     </ul>
   <p>The keyboard comes in ALL colours. Approximately 16.4 million colours that change gently and slowly over time or change after a tap of the key.</p>
+  <img src="photos/lightup.jpg">
   <h1>YOUR CHOICE</h1>
   <h2 class="author"> About the author</h2>
-  <p> The author is a boy with a mad love toward gaming and enjoys the suspense and emotion it provides to him through visual and mental stimulation.Many of the previous generation find gaming to be a very tedious activity and waste of time. In reality it develops a childs ability to do most things grown ups wouldnt be able to do.</p>
-  <img src="photos/gaminghelps.jpg" align="middle">
+  <p> The author is a boy with a mad love towards gaming and enjoys the suspense and emotion it provides to him through visual and mental stimulation.Many of the previous generation find gaming to be a very tedious activity and waste of time. In reality it develops a childs ability to do most things grown ups wouldnt be able to do.</p>
+  <img src="photos/gaminghelps.jpg" style="width:500px;height:300px;">
 </body>
 </html>
