--- a/index.html
+++ b/index.html
@@ -1,10 +1,68 @@
 
 <html>
 <head>
-  <title>My first webpage!</title>
+    <title>The Future of Gaming</title>
+<link  href="CSS/styles.css" rel="stylesheet" type="text/css">
+<script src="JavaQuery/jquery-3.2.1.js"></script>
+<script src="JavaQuery/scripts.js"></script>
 </head>
 <body>
-  <p>Hello, world!</p>
-  <p>Welcome to my first webpage!</p>
+  <h1>Welcome to the Future</h1>
+  <h2>This article is of no officiality. Please dont sue.</h2>
+  <p>For more information about
+
+  <p class="intro">The main reason i set up this website is to spread awareness of gaming laptops and how magnificently powerful they are in comparison to the common office laptops used. Though the common laptop is still powerful.</p>
+  <p>The leading brand of gaming laptops is currently Razer as it develops "AlienWare" which basically means that both the hardware and the software are extremely powerful. Almost out of this world.</p>
+
+  <p> Here are the specs of the latest Razer gaming laptop, The Razer Blade Stealth;</p>
+  <ul>
+    <li>Weight: 1.23Kgs</li>
+    <li>Battery life: 9 hours on the QHD+ display
+      <ul>
+        <li>7 hours on the 4k resolution display</li>
+        <li>15 hours with the Razer power bank</li>
+      </ul>
+    <li>Processor: Intel i7 Core 7th Generation</li>
+      <ul>
+        <li>i7-7500U</li>
+      </ul>
+    <li>Memory:Upto 16b Dual channel</li>
+    <li>Storage:Upto 1Tb PCle SSD</li>
+    <li>Screen: 13.3" QHD+</li>
+      <ul>
+        <li>3200x1800</li>
+        <li>Touch Screen</li>
+      </ul>
+    <li> Operating System(OS): Windows&#174 10 Home (64-bit)</ls>
+  </ul>
+  <img src="photos/Razor.jpg" alt="A picture of a computer" align="middle">
+  <p>The Razer laptops may even come with the Thunderbolt<sup>TM</sup> 3. This cable enables the laptop to connect to any display, port or peripheral device-allowing more utility with zero hassle.</p>
+  <p> The Thunderbolt<sup>TM</sup> 3 contains some of the following features:</p>
+  <ul>
+  <img src="photos/thunderbolt3.jpg">
+    <li>It has speeds able to reach 40 mbps</li>
+    <li>Plug-and-Play external graphics</li>
+    <li>Works with USB, PCI Express and Display Port</li>
+    <li>Connect DVI, HDMI and VGA displays via adapters</li>
+    <li>Powers your laptop</li>
+  </ul>
+  <h3>GAMING HAS NEVER FELT SO GOOD OR LOOKED SO GOOD..... THE NEXT LEVEL HAS BEEN REACHED</h3>
+  <p>The Razer Blade Stealth comes in two colours:</p>
+    <ul>
+      <li>Gunmetal</ls>
+      <li>Black</li>
+  <img src="photos/gunmetal.jpg" style="width:300px;height:150px;">
+  <img src="photos/option2.jpg" style="width:300px;height:150px;">
+    </ul>
+  <p>The keyboard comes in ALL colours. Approximately 16.4 million colours that change gently and slowly over time or change after a tap of the key.</p>
+  <img src="photos/lightup.jpg">
+  <h1>YOUR CHOICE</h1>
+  <h2 class="author"> About the author</h2>
+  <p> The author is a boy with a mad love towards gaming and enjoys the suspense and emotion it provides to him through visual and mental stimulation.Many of the previous generation find gaming to be a very tedious activity and waste of time. In reality it develops a childs ability to do most things grown ups wouldnt be able to do.</p>
+  <div class="gaminghelps-showing">
+  <img src="photos/gaminghelps.jpg" style="width:500px;height:300px;">
+</div>
+  <script src="JavaQuery/jquery-3.2.1.js">
+  <script src="JavaQuery/scripts.js"></script>
 </body>
 </html>
