--- a/individual-projects.html
+++ b/individual-projects.html
@@ -2,12 +2,18 @@
 <html>
 <head>
     <title>Oneplus 5 Specs</title>
+<link href="CSS/bootstrap.min.css" rel="stylesheet" type="text/css">
+<link href="CSS/bootstrap-theme.min.css" rel="stylesheet" type="text/css">
 <link href="CSS/IPstyles.css" rel="stylesheet" type="text/css">
-<head>
+</head>
 <body>
+  <div class="container">
+    <div class="jumbotron">
   <h1>Perfection</h1>
+      <div class="sidebar">
   <h2>This webpage is of no officiality.</h2>
-
+    </div>
+  </div>
   <p class="intro">The Oneplus is a unique mobile device manufactured in China.It uses both the operating systems Android and Oxygen. Both these OS's combined result in an extremely strong device</p>
   <p>Oneplus&#174 is by far more efficient and user-friendly than iPhone. It enables customers to be able to do business on the go without the use of a laptop.</p>
   <p> All Oneplus&#174 devices come with office apps such as:</p>
@@ -17,11 +23,15 @@
     <li>Google Slides-Equivalent of Microsoft PowerPoint</li>
     <li>Google Drive</li>
   </ul>
+</div>
 
-  <p>The Oneplus&#174 has some parameters that one would not expect to run on a phone straight from the factory. </p>
+    <p>The Oneplus&#174 has many parameters that one would not expect to run on a phone straight from the factory. </p>
  <h2 class="author"> About the author</h2>
  <p>The author is a boy who has a deep love for technology and its continious advancements escpecially in the gaming field. I started kindergarten in International Christian Kindergarten,then moved on to Rusinga School where i repeated kindergarten. I reached year 4 and moved to Premier Academy where i recently finished my year 11 'O' levels and am awaiting for my results.</p>
- <p>I decided that a coding class would help:</p>
+ <p>Here are the links to the other projects that i have worked on:</p>
+   <ul>
+     <li>
+ <p>I decided that a coding class would:</p>
    <ol>
      <li>Help me advance towards my carrer as a future game developer</li>
      <li>Expand my knowledge</li>
@@ -33,5 +43,9 @@
     <li>Sleeping</li>
   </ul>
  <img src="photos/gaminglife.jpg" style="width:300px;height:300px;">
-</head>
+
+
+
+
+</body>
 </htmL>
